Revert "Issue #2906839 by agoradesign, benjy: Images in tables are rendered way too small (Dompdf)"
This reverts commit d8e68242764ae80d2df46d66a200e5af2041b467.

--- a/css/entity-print.css
+++ b/css/entity-print.css
@@ -11,6 +11,6 @@ body {
   height: auto;
 }
 
-td img {
+.page td img {
   max-width: none;
 }
